--- a/public/css/tour/spa.css
+++ b/public/css/tour/spa.css
@@ -792,7 +792,7 @@ div , p , ul, li, span {
 
     .section4_map {
         width: 100%;
-        height: 60vh;
+        height: 40rem;
     }
 
     .section2 {
