--- a/public/css/contents/reservation.css
+++ b/public/css/contents/reservation.css
@@ -306,7 +306,7 @@
         padding-left: 5.105rem;
         line-height: 3.5rem;
         font-size: 3rem;
-        width: 192px;
+        width: 30rem;
         display: flex;
         align-items: center;
     }
