--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -4377,6 +4377,11 @@
     cursor: pointer;
 }
 
+.custom-golf-detail .qa-list .no-data {
+    margin-top: 30px;
+    text-align: center;
+}
+
 .custom-golf-detail .qa-question {
     display: flex;
     align-items: center;
