--- a/public/css/tour/tour_responsive.css
+++ b/public/css/tour/tour_responsive.css
@@ -2993,7 +2993,7 @@
   }
 
   .custom-golf-detail .calendar {
-    height: 24rem;
+    height: 28rem;
     padding: 0 3rem;
     max-width: 100%;
     border-bottom: 0.21rem solid rgb(238, 238, 238);
@@ -3667,6 +3667,11 @@
     display: flex;
     align-items: center;
     width: unset;
+    flex-wrap: wrap;
+  }
+
+  .custom-golf-detail .box-selecter .ic_item .flex__c {
+    width: 100% !important;
   }
 
   .custom-golf-detail .box-selecter .ic_item .body-box .box p {
@@ -3705,6 +3710,30 @@
 
   .custom-golf-detail .tag-con-below-calendar .item-tag.new {
     width: unset;
+    flex-wrap: wrap;
+    gap: 2rem;
+  }
+
+  .custom-golf-detail .body-box {
+      width: calc(100% - 18rem);
+      gap: 1rem;
+  }
+
+  .custom-golf-detail .box-selecter .ic_item .body-box {
+      gap: 1rem;
+  }
+
+  .custom-golf-detail .box-selecter .ic_item .body-box .box {
+      padding: 0 2rem;
+    }
+
+  .custom-golf-detail .tag-con-below-calendar .item-tag span.label {
+        font-size: 2.7rem;
+        width: 18rem !important;
+    }
+
+  .custom-golf-detail .tag-con-below-calendar .item-tag .item-tag-select {
+      width: 100%;
   }
 
   .content-sub-hotel-detail .book-button {
@@ -3713,7 +3742,7 @@
     background-color: var(--bs-point);
     color: white;
     border-radius: 0.4rem;
-    padding: 1.2rem 2rem;
+    padding: 1.2rem 1.5rem;
   }
 
   .content-sub-hotel-detail .book-add-cart {
@@ -3721,7 +3750,7 @@
       color: black;
       border: 1px solid #dbdbdb;
       border-radius: 0.4rem;
-      padding: 1.2rem 1rem;
+      padding: 1.2rem 1.5rem;
       cursor: pointer;
       width: 100%;
       margin-top: 0.2rem;
@@ -4309,10 +4338,26 @@
     height: 2.4rem !important;
   }
 
-  .content-sub-hotel-detail .wrap_bed_type .wrap_input_radio input:checked+label::after {
+  .content-sub-hotel-detail .wrap_bed_type .wrap_input_radio input[type="checkbox"]:checked+label::after {
     width: 1.6rem !important;
     height: 1.6rem !important;
     left: 0.4rem !important;
+    font-size: 2rem !important;
+    top: 38% !important;
+  }
+
+  .content-sub-hotel-detail .wrap_bed_type .wrap_input_radio input[type="radio"]:checked+label::after {
+    width: 1.6rem !important;
+    height: 1.6rem !important;
+    transform: translate(-50%, -50%) !important;
+    font-size: 2rem !important;
+    top: 48% !important;
+    left: 2% !important;
+  }
+
+  .custom-golf-detail .qa-list .no-data {
+    margin-top: 3rem;
+    text-align: center;
   }
 
 
