--- a/public/css/tour/tour_responsive.css
+++ b/public/css/tour/tour_responsive.css
@@ -3124,6 +3124,7 @@
     flex-direction: column;
     gap: 3rem;
     margin-bottom: 8rem;
+    align-items: flex-start;
   }
 
   .custom-golf-detail .list-select-element .item-select .label {
@@ -3566,6 +3567,40 @@
     display: flex;
     align-items: center;
     gap: 3rem;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+
+  .section-wrap-s
+  {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding-bottom: 2rem;
+      gap: 1rem;
+  }
+
+  .section-wrap-s .btn-s-wrap {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      width: 100%;
+      gap: 2rem;
+  }
+
+  .custom-golf-detail .section-wrap-s .btn-s-wrap .btn-price-content
+  {
+      width: calc(50% - 1rem);
+      height: 8rem;
+      font-size: 2.8rem !important;
+  }
+
+  .content-custom-table .content-item
+  {
+      display: flex;
+      gap: 5rem;
+      padding: 3.2rem 0;
+      flex-direction: column;
   }
 
   .sub_section3__head {
@@ -3701,7 +3736,7 @@
   }
 
   .custom-golf-detail .tag-con-below-calendar .ic_item select {
-    width: 20rem !important;
+    width: 25rem !important;
   }
 
   .custom-golf-detail .flex-col-mo {
