--- a/public/css/tour/tour_responsive.css
+++ b/public/css/tour/tour_responsive.css
@@ -2057,6 +2057,8 @@
     list-style: none;
     padding: 0;
     margin: 0;
+    flex-wrap: wrap;
+    row-gap: 2rem;
   }
 
   .content-sub-product-hotel .page-link {
@@ -3132,7 +3134,7 @@
   }
 
   .custom-golf-detail .item-select select {
-    width: 48.5rem !important;
+    width: 65.5rem !important;
   }
 
   .custom-golf-detail .section2-sub {
@@ -3577,7 +3579,8 @@
       align-items: center;
       justify-content: space-between;
       padding-bottom: 2rem;
-      gap: 1rem;
+      gap: 1.5rem;
+      flex-wrap: wrap;
   }
 
   .section-wrap-s .btn-s-wrap {
