--- a/public/css/contents/sub_responsive.css
+++ b/public/css/contents/sub_responsive.css
@@ -2017,10 +2017,11 @@
   .content-sub-product-hotel .below-filter-content .search_keyword .btn_search {
     border-radius: 0.2rem !important;
     padding-right: 2rem !important;
+    height: 7rem;
   }
 
   .content-sub-product-hotel .below-filter-content .search_keyword .btn_search button {
-      width: 2.6rem !important;
+      width: 3rem !important;
       height: 4.5rem !important;
       background: url(/images/ico/keyword_ic.png) no-repeat center;
       background-size: 2.6rem 2.5rem !important;
