--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -653,7 +653,8 @@
 }
 
 .sub-hotel-navigation-container .depth_2_tools_,
-.sub-hotel-navigation-container .depth_1_tools_ {
+.sub-hotel-navigation-container .depth_1_tools_,
+.sub-hotel-navigation-container .depth_3_tools_ {
     position: absolute;
     padding: 10px 12px;
     background-color: #fff;
@@ -665,17 +666,20 @@
 }
 
 .sub-hotel-navigation-container .depth_2_tools_.active_,
-.sub-hotel-navigation-container .depth_1_tools_.active_ {
+.sub-hotel-navigation-container .depth_1_tools_.active_,
+.sub-hotel-navigation-container .depth_3_tools_.active_ {
     display: block;
 }
 
 .sub-hotel-navigation-container .depth_2_tool_list_,
-.sub-hotel-navigation-container .depth_1_tool_list_ {
+.sub-hotel-navigation-container .depth_1_tool_list_,
+.sub-hotel-navigation-container .depth_3_tool_list_ {
     width: 80px;
 }
 
 .sub-hotel-navigation-container .depth_2_item_,
-.sub-hotel-navigation-container .depth_1_item_ {
+.sub-hotel-navigation-container .depth_1_item_,
+.sub-hotel-navigation-container .depth_3_item_ {
     padding: 3px 0;
     font-size: 16px;
     margin: 5px 0;
@@ -683,12 +687,14 @@
 }
 
 .sub-hotel-navigation-container .depth_2_item_.active_,
-.sub-hotel-navigation-container .depth_1_item_.active_ {
+.sub-hotel-navigation-container .depth_1_item_.active_,
+.sub-hotel-navigation-container .depth_3_item_.active_ {
     color: #17469E;
 }
 
 .sub-hotel-navigation-container .depth_2_item_:hover,
-.sub-hotel-navigation-container .depth_1_item_:hover {
+.sub-hotel-navigation-container .depth_1_item_:hover,
+.sub-hotel-navigation-container .depth_3_item_:hover {
     color: rgba(23, 70, 158, 0.75);
 }
 
