--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -690,7 +690,8 @@
 }
 
 #depth_3_label {
-    margin-left: 30px;
+    display: inline-block;
+    min-width: 55px;
 }
 
 .sub-hotel-navigation-container .depth_2_item_.active_,
