--- a/public/css/tour/tour_responsive.css
+++ b/public/css/tour/tour_responsive.css
@@ -3829,6 +3829,7 @@
     color: white;
     border-radius: 0.4rem;
     padding: 1.2rem 1.5rem;
+    min-width: 14rem;
   }
 
   .content-sub-hotel-detail .book-add-cart {
