--- a/public/css/tour/tour_responsive.css
+++ b/public/css/tour/tour_responsive.css
@@ -3832,6 +3832,10 @@
     min-width: 14rem;
   }
 
+  .content-sub-hotel-detail .book-button:disabled {
+    padding: 1.2rem 1.5rem;
+  }
+
   .content-sub-hotel-detail .book-add-cart {
       background-color: white;
       color: black;
