--- a/public/css/contents/sub.css
+++ b/public/css/contents/sub.css
@@ -5922,6 +5922,8 @@ input[type=checkbox]:checked+.vehicle_options__label__vehicle_prd::after {
 
 .coupon_list .coupon_visual {
     position: relative;
+    width: 100%;
+    height: 150px;
 }
 
 .coupon_list .coupon_visual .visual_txt {
