--- a/public/css/contents/sub_responsive.css
+++ b/public/css/contents/sub_responsive.css
@@ -2241,6 +2241,8 @@
 
   .coupon_list .coupon_visual {
     position: relative;
+    width: 100%;
+    height: 20rem;
   }
 
   .coupon_list .coupon_visual .visual_txt {
@@ -2266,6 +2268,7 @@
 
   .coupon_list .coupon_visual img {
     width: 100%;
+    height: 100%;
   }
 
   .coupon_list .coupon_content {
