--- a/public/css/center/map.css
+++ b/public/css/center/map.css
@@ -4185,6 +4185,10 @@ form .form_list .name_row input+input {
           line-height: 1.3;
 }
 
+.intro .table_info tr .open p {
+  font-size: 16px;
+}
+
 .intro .table_info tr .ic {
           gap: 10px;
 }
