--- a/public/css/mypage/mypage_reponsive_new.css
+++ b/public/css/mypage/mypage_reponsive_new.css
@@ -2176,4 +2176,62 @@
     .f_black em {
         display: none;
     }
+
+    .custom_popup_content {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: calc(100% - 4rem);
+        min-height: 58rem;
+        max-height: 60vh;
+        overflow-y: scroll;
+        padding: 2rem;
+        border-radius: 8px;
+        background-color: #fff;
+    }
+
+    .custom_popup .sec2 {
+        margin-top: 4rem;
+    }
+
+    .group_movement_popup_wrap h1 {
+        text-align: left;
+        font-size: 4rem;
+        font-weight: bold;
+        margin-bottom: 4rem;
+    }
+
+    .custom_popup .box_select select {
+        width: 40rem !important;
+        height: 8rem;
+        font-size: 2.8rem;
+    }
+
+    .custom_popup .box_select .btn_select {
+        height: 8rem;
+        width: 20rem;
+        background-color: #2e3e92;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 2.8rem;
+        color: #fff;
+        cursor: pointer;
+    }
+
+    .custom_popup tr label {
+        position: relative;
+        width: 3.5789rem;
+        height: 3.5789rem;
+        padding: 0;
+        background-size: 18px 18px;
+    }
+
+    .custom_popup tr input:checked + label {
+        background-size: 3.5789rem 3.5789rem;
+    }
+
+
+
 }
