--- a/public/css/contents/guide.css
+++ b/public/css/contents/guide.css
@@ -102,7 +102,7 @@
     font-size: 16px;
     font-weight: 600;
     margin-top: 16px;
-    width: 100%;
+    width: 160px;
     height: 40px;
     background-color: #2a459f;
 }
