--- a/public/css/layout/popup.css
+++ b/public/css/layout/popup.css
@@ -179,6 +179,11 @@
     font-size: 16px;
 }
 
+.popup_wrap.cart_info_pop .pop_selectric {
+    width: 100px;
+    margin-bottom: 20px;
+}
+
 .popup_wrap.cart_info_pop .textarea-tb {
     width: 100%;
     height: 112px;
