--- a/public/css/tour/tour.css
+++ b/public/css/tour/tour.css
@@ -1416,9 +1416,57 @@
     display: flex !important;
     gap: 10px;
     align-items: center;
+    position: relative;
+}   
+
+.content-sub-hotel-detail .title-container .list-icon .list_share {
+    position: absolute;
+    top: calc(100% + 10px);
+    right: -14px;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    gap : 18px;
+    align-items: center;
+    display: none;
 }
 
-.content-sub-hotel-detail .title-container .list-icon img:first-child {
+.content-sub-hotel-detail .title-container .list-icon .list_share.on {
+    display: flex;
+}
+
+.content-sub-hotel-detail .title-container .list-icon .list_share::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -20px;
+    left: 50%;
+    transform: translateX(-50%);
+    border-top: 10px solid transparent;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid #fff;
+    filter: drop-shadow(0 0 8px rgba(0, 0, 0, 0.3));
+}
+
+
+
+.content-sub-hotel-detail .title-container .list-icon .list_share img {
+    padding: 0;
+}
+
+.content-sub-hotel-detail .title-container .list-icon .list_share .kakao img{
+    width: 40px;
+}
+
+.content-sub-hotel-detail .title-container .list-icon .list_share .link_ img{
+    width: 30px;
+}
+.content-sub-hotel-detail .title-container .list-icon > img:first-child {
     padding: 8px 6px;
     background-color: #f5f5f5;
     border-radius: 4px;
