--- a/public/css/contents/guide.css
+++ b/public/css/contents/guide.css
@@ -216,9 +216,9 @@ table.book_tbl td.label_flex label {
 
 table.book_tbl .custom_input {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
-    gap: 10px;
+    gap: 30px;
     width: 100%;
 }
 
