--- a/public/css/tour/tour_responsive.css
+++ b/public/css/tour/tour_responsive.css
@@ -506,7 +506,49 @@
     margin-left: auto;
     display: flex;
     gap: 1.5rem;
+    position: relative;
+    align-items: center;
   }
+
+  .content-sub-hotel-detail .section1 .location-container .list-icon .list_share {
+    position: absolute;
+    top: calc(100% + 2rem);
+    right: -1rem;
+    background-color: #fff;
+    padding: 2.5rem 1.5rem;
+    border-radius: 5px;
+    box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    align-items: center;
+    display: none;
+  }
+
+  .content-sub-hotel-detail .section1 .location-container .list-icon .list_share.on {
+    display: flex;
+  }
+
+  .content-sub-hotel-detail .location-container .list-icon .list_share::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -2.6rem;
+    left: 50%;
+    transform: translateX(-50%);
+    border-top: 1.5rem solid transparent;
+    border-left: 1.5rem solid transparent;
+    border-right: 1.5rem solid transparent;
+    border-bottom: 1.5rem solid #fff;
+    filter: drop-shadow(0 0 8px rgba(0, 0, 0, 0.3));
+}
+
+.content-sub-hotel-detail .location-container .list-icon .list_share .kakao img {
+    width: 5rem;
+    height: auto;
+}
+
 
   .content-sub-hotel-detail .section1 .location-container .list-icon img {
        padding: 0;
