--- a/public/css/contents/sub_responsive.css
+++ b/public/css/contents/sub_responsive.css
@@ -541,6 +541,7 @@
   .other_irregularities {
     height: 18rem;
     font-size: 2.4rem;
+    padding-top: 3.4rem;
   }
 
   .other_irregularities::placeholder {
