--- a/public/css/tour/tour_responsive.css
+++ b/public/css/tour/tour_responsive.css
@@ -1660,7 +1660,8 @@
   }
 
   .content-sub-product-hotel .list-item-info .item-info-label {
-    padding: 3rem 0 3rem 3rem;
+    /* padding: 3rem 0 3rem 3rem; */
+    padding: 3rem;
     background-color: #F3F3F3;
     margin-bottom: 3.2rem;
     font-weight: 500;
