--- a/public/css/contents/sub_responsive.css
+++ b/public/css/contents/sub_responsive.css
@@ -541,7 +541,8 @@
   .other_irregularities {
     height: 18rem;
     font-size: 2.4rem;
-    padding-top: 3.4rem;
+    padding-top: 2.2rem;
+    line-height: 1.4;
   }
 
   .other_irregularities::placeholder {
@@ -1446,6 +1447,15 @@
     width: 42rem;
     margin-bottom: 1.2rem;
   }
+  
+  .customer-form-page .container-card .item-info.w100 {
+    width: 100% !important;
+  }
+
+  .customer-form-page .container-card .item-info.w100 span{
+    width: 100% !important;
+  }
+
 
   .customer-form-page .container-card .item-info span:first-child {
     /* width: 22rem; */
